eeprom BAUD to 115200

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	mikalhart/TinyGPSPlus@^1.1.0
 	mikalhart/TinyGPS@0.0.0-alpha+sha.db4ef9c97a
